--- a/appspec.yml
+++ b/appspec.yml
@@ -8,7 +8,7 @@ hooks:
     - location: scripts/install_dependencies
       timeout: 300
       runas: root
-  AfterInstall:
+  ApplicationStart:
     - location: scripts/start_server
       timeout: 300
       runas: root
