--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: express.js
-    destination: /home/bitnami/express.js
+    destination: /home/bitnami
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies
